--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -571,16 +571,21 @@ background-color: #AB9FF2; /* Change the background to green */
   #jupiter-terminal > div > div::-webkit-scrollbar-thumb:hover {
     background-color: rgba(1, 39, 50, 0.8);
   }
-}
+};
 
 /* JUPITER STYLES END ===========>  */
 
+.chart-container {
+  display: flex;
+  justify-content: flex-end;
+};
+
 .legend {
-	position: absolute;
-	left: 12px;
-	top: 12px;
-	z-index: 1;
-	font-size: 12px;
-	line-height: 18px;
-	font-weight: 300;
-}
+  position: absolute;
+  left: 12px;
+  top: 12px;
+  z-index: 1;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 300;
+};
