--- a/public/styles/tradingview.css
+++ b/public/styles/tradingview.css
@@ -267,3 +267,7 @@ html.theme-dark .container-3Ywm3-oo.selected-3Ywm3-oo.highlighted-3Ywm3-oo.dark-
 html.theme-dark .container-3Ywm3-oo:not(.disabled-3Ywm3-oo):hover.selected-3Ywm3-oo {
   background-color: var(--bkg-light);
 }
+
+.handle-uqBaC1Ki {
+  background-color: #043542;
+}
