--- a/src/app/data/css/styles.css
+++ b/src/app/data/css/styles.css
@@ -18,7 +18,6 @@
   .footer-header-title {
     @apply font-medium text-xl sm:text-base leading-7 text-missioncontrol mb-1 sm:mb-2;
   }
-
   .footer-link {
     @apply font-medium text-xl sm:text-base leading-7 text-white cursor-pointer transition-all duration-200 ease-in-out hover:opacity-60;
   }
@@ -40,27 +39,6 @@
   .text-balance {
     text-wrap: balance;
   }
-}
-
-.slick-dots li button:before {
-  color: #384c61 !important;
-  opacity: 1 !important;
-  font-size: 12px !important;
-}
-
-.slick-dots li.slick-active button:before {
-  color: #5099cc !important;
-}
-
-::-webkit-scrollbar {
-  width: 8px;
-  border-radius: 15px;
-  background-color: rgba(0, 0, 0, 0.26);
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 15px;
-  background-color: black;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -216,237 +194,6 @@ tspan {
   border: none !important;
 }
 
-/* JUPITER STYLES ===========>  */
-
-#integrated-terminal {
-  background-color: #012630;
-  border: none; /* Removes the border */
-  min-height: 419px; /* Example minimum height */
-  max-height: 819px; /* Example maximum height */
-  /* Other styles */
-}
-
-/* Custom Styles for Jupiter Widget Inner Button */
-#integrated-terminal button.relative.text-white.bg-\[\#191B1F\].dark\:bg-black\/50.w-full.mt-4.rounded-xl {
-  width: 100%;
-  border: 1px solid #5099CC; /* border-[1px] */
-  color: #d1d5db; /* text-primary-300 */
-  font-size: 14px; /* text-[14px] */
-  font-weight: 500; /* font-medium */
-  letter-spacing: normal; /* tracking-wide */
-  border-radius: 12px; /* rounded-[12px] */
-  background-color: #012630; /* bg-[#012630] */
-  transition: opacity 0.3s, transform 0.3s; /* For hover and active states */
-}
-
-#integrated-terminal button.relative.text-white.bg-\[\#191B1F\].dark\:bg-black\/50.w-full.mt-4.rounded-xl:hover {
-  opacity: 0.7 !important; /* hover:opacity-70 */
-}
-
-#integrated-terminal button.relative.text-white.bg-\[\#191B1F\].dark\:bg-black\/50.w-full.mt-4.rounded-xl:active {
-  transform: translateY(2px) !important; /* active:translate-y-[2px] */
-}
-
-#integrated-terminal svg {
-  fill: white !important; /* SVG color */
-}
-
-#jupiter-terminal .bg-\[\#212128\], #jupiter-terminal .bg-\[\#36373E\] {
-  background-color: rgba(4, 51, 65, 0.7) !important; /* Replace #043341 with RGBA, 70% opacity */
-}
-
-#jupiter-terminal .bg-\[\#212128\]:hover, #jupiter-terminal .bg-\[\#36373E\]:hover {
-  background-color: rgba(4, 51, 65, 1) !important; /* Full opacity on hover */
-}
-
-#jupiter-terminal .bg-\[\#191B1F\]:hover {
-  background-color: #5099CC !important; /* Color on hover */
-}
-
-#jupiter-terminal input[type="text"] {
-  background-color: transparent !important; /* Or your desired background color */
-  color: #d1d5db !important; /* Text color */
-  /* Other styles like border, font-size, etc. */
-}
-
-#jupiter-terminal svg {
-  fill: white !important; /* SVG color */
-}
-
-#jupiter-terminal > div > div > div > div > div > div > div > ul {
-  background-color: rgba(4, 51, 65, 1) !important; /* Full opacity on hover */
-  color: #d1d5db !important; /* General text color */
-}
-
-#jupiter-terminal > div > div > div > div > div.flex.flex-col.w-full.justify-center.items-center.px-5.mt-7 > div {
-  background-color: #043341; /* Change the background to green */
-}
-
-#jupiter-terminal > div > div > div > div > div > a > span {
-  visibility: hidden; /* Hides the original text */
-  position: relative;
-}
-
-#jupiter-terminal > div > div > div > div > div > a > span::after {
-  content: 'Swap'; /* New text */
-  visibility: visible;
-  position: absolute;
-  top: 0;
-  left: 10px;
-}
-
-#jupiter-terminal > div > div > div > div > div.flex.w-full.justify-center.items-center.mt-9 > div > img {
-  visibility: hidden;
-  position: relative;
-}
-
-#jupiter-terminal > div > div > div > div > div.flex.w-full.justify-center.items-center.mt-9 > div {
-  position: relative;
-}
-
-#jupiter-terminal > div > div > div > div > div.flex.w-full.justify-center.items-center.mt-9 > div::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-image: url('../../../../public/assets/arcanaswap.svg'); /* Update with the correct path */
-  background-size: cover; /* Or 'contain' based on your need */
-  background-position: center;
-}
-
-#jupiter-terminal > div > div > div > div > div > a > img {
-  visibility: hidden;
-  position: relative;
-}
-
-#jupiter-terminal > div > div > div > div > div > a {
-  position: relative;
-}
-
-#jupiter-terminal > div > div > div > div > div > a::after {
-  content: "";
-  position: absolute;
-  top: 10;
-  right: 52px;
-  width: 38px;  /* Set the width of the pseudo-element */
-  height: 38px; /* Set the height of the pseudo-element */
-  background-image: url('../../../../public/assets/arcanaswap.svg'); /* Update with the correct path */
-  background-size: contain; /* Use 'contain' to ensure the entire image fits within the dimensions */
-  background-position: center;
-}
-
-#jupiter-terminal {
-  /* General styles for the terminal */
-  background-color: #012630 !important; /* Overall background */
-  color: white !important; /* General text color */
-}
-
-#jupiter-terminal > div > div > div > form > div > div.w-full.mt-2.rounded-xl.flex.flex-col.px-2 > div > div.border-b.border-transparent.bg-\[\#212128\].rounded-xl.transition-all {
-  background-color: #012630 !important; /* Replace with the color you want */
-  /* You can add more styling properties here as needed */
-}
-
-#jupiter-terminal > div > div > div > form > div > div.w-full.mt-2.rounded-xl.flex.flex-col.px-2 > div > div:nth-child(3) {
-  background-color: #012630 !important; /* Replace with the color you want */
-  /* Additional styling properties can be added here as needed */
-}
-
-#jupiter-terminal > div > div > div > div > div > div > div > button {
-  background-color: #043341 !important; /* Main button background color */
-}
-
-#jupiter-terminal > div > div > div > div > div > div > div > button:hover {
-  background-color: #5099CC !important; /* Purple color on hover */
-}
-
-#jupiter-terminal > div > div > div > div.absolute.top-0.left-0.h-full.w-full.bg-jupiter-bg.rounded-lg.overflow-hidden:hover {
-  /* Your styles here */
-  background-color: #012630 !important; /* Replace with the color you want */
-
-}
-
-#jupiter-terminal > div > div > div > div.absolute.top-0.left-0.h-full.w-full.bg-jupiter-bg.rounded-lg.overflow-hidden {
-  background-color: #012630 !important; /* Ensures the background is always green */
-}
-
-
-#jupiter-terminal > div > div > div > div > div:nth-child(2) > div {
-  background-color: #043341; /* Sets the background color to #043341 */
-}
-
-#jupiter-terminal > div > div > div > div > div.flex.flex-col.justify-center.items-center > div > div.mt-4.space-y-4.border.border-white\/5.rounded-xl.p-3.bg-\[\#25252D\].border-none.mt-0 {
-  background-color: #043341; /* Sets the background color to #043341 */
-}
-
-#jupiter-terminal > div > div > div > form > div > div.w-full.mt-2.rounded-xl.flex.flex-col.px-2 > div > div.my-2 > div > div {
-  background-color: #043341 !important; /* Existing style */
-  margin-bottom: -1rem; /* Adds a bottom margin of 1rem (16 pixels) */
-  transform: translateY(-10px); /* Moves the element up by 10 pixels */
-  /* Include other existing styles here */
-  }
-  
-  /* Include other existing styles here */
-
-#jupiter-terminal > div > div > div > form > div > div.w-full.mt-2.rounded-xl.flex.flex-col.px-2 > div > div.my-2 {
-  margin-bottom: 0px !important;
-}
-
-#jupiter-terminal > div > div > div > form > div > div:nth-child(2) > div > button:hover {
-  background-color: #5099CC !important; /* Ensures this style takes precedence on hover */
-}
-
-#jupiter-terminal > div > div > div > div.absolute.top-0.left-0.h-full.w-full.bg-jupiter-bg.rounded-lg.overflow-hidden > div > div.mt-2 > div > div > div > li > div {
-  background-color: #043341; /* Applies the background color to all rows */
-}
-
-#integrated-terminal, #jupiter-terminal {
-  flex: 1; /* This will make both elements take up equal space */
-  /* Or you can set specific widths */
-}
-
-#jupiter-terminal > div > div > div > form > div > div:nth-child(2) > div.mt-4.space-y-4.border.border-white\/5.rounded-xl.p-3 {
-  position: relative; /* If it's not already positioned */
-  background-color: #043341; /* Replace with your desired color */
-
-  /* Other existing styles */
-}
-/* Custom Sleek Scrollbar Styles for #jupiter-terminal > div > div */
-#jupiter-terminal > div > div::-webkit-scrollbar {
-  width: 6px; /* Thin scrollbar width */
-}
-
-#jupiter-terminal > div > div::-webkit-scrollbar-track {
-  background-color: #012A36; /* Background color same as the page */
-}
-
-#jupiter-terminal > div > div::-webkit-scrollbar-thumb {
-  background-color: rgba(1, 39, 50, 0.6); /* Slightly visible scrollbar thumb */
-  border-radius: 3px; /* Mildly rounded corners for the scrollbar thumb */
-}
-
-#jupiter-terminal > div > div::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(1, 39, 50, 0.8); /* Darker shade on hover for better visibility */
-}
-
-/* Ensuring scrollbar blends well in dark mode too for #jupiter-terminal */
-@media (prefers-color-scheme: dark) {
-  #jupiter-terminal > div > div::-webkit-scrollbar-track {
-    background-color: #012732;
-  }
-
-  #jupiter-terminal > div > div::-webkit-scrollbar-thumb {
-    background-color: rgba(1, 39, 50, 0.6);
-  }
-
-  #jupiter-terminal > div > div::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(1, 39, 50, 0.8);
-  }
-}
-
-/* JUPITER STYLES END ===========>  */
-
 .shiny-gradient-text {
   font-weight: bold; /* Makes the text bold */
   background: linear-gradient(45deg, #5099CC, #5099CC, #FFFFFF, #5099CC);
@@ -562,3 +309,17 @@ tspan {
   }
 
 };
+
+.subscript {
+  display: inline-block;
+  position: relative;
+  vertical-align: baseline;
+  font-size: smaller;
+}
+
+.subscript::after {
+  content: '₄'; /* Unicode subscript 4 character */
+  position: absolute;
+  bottom: 0.5em; /* Adjust as needed to align with the baseline */
+  left: 0.1em; /* Adjust as needed to position correctly */
+}
