--- a/src/app/data/css/styles.css
+++ b/src/app/data/css/styles.css
@@ -323,3 +323,8 @@ tspan {
   bottom: 0.5em; /* Adjust as needed to align with the baseline */
   left: 0.1em; /* Adjust as needed to position correctly */
 }
+
+/* I mostly use this for math like exponents and stuff */
+sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
+sup { top: -0.3em; vertical-align: super;}
+sub { bottom: -0.25em; vertical-align: sub;}
